added some changes

--- a/src/main/resources/templates/details.hbs
+++ b/src/main/resources/templates/details.hbs
@@ -16,7 +16,7 @@
 
 {{/if}}
 
-    <a href="/hero/{{hero.id}}/update">Edit this post</a>
+    <a href="/heroes/{{hero.id}}/update">Edit this post</a>
 
 
 {{/partial}}
