--- a/src/main/resources/templates/formtwo.hbs
+++ b/src/main/resources/templates/formtwo.hbs
@@ -1,19 +1,53 @@
 {{#partial "content"}}
 
-    <h1>Add a new model.squad!</h1>
+    <h1 style="margin-top:150px;">Add a new model.squad!</h1>
 
     <form action="/squad/new" method="post">
         <label for="Name">Squad name</label>
-        <input id="Name" name="Name" type="text"><br>
+        <input id="Name" name="Name" type="text"><br><br>
 
         <label for="Cause">Squad cause</label>
-        <input id="Cause" name="Cause" type="text"><br>
+        <input id="Cause" name="Cause" type="text"><br><br>
 
-        <label for="size">Squad size</label>
-        <input id="size" name="size" type="number"><br>
+        <label style='margin-right: 1%;' for="size">Squad size</label>
+        <input id="size" name="size" type="number"><br><br>
         <button type="submit" class="btn btn-default">Go!</button>
     </form>
+    <style>
+    body{
+background-image:
+url("https://2l7g9kgsh281akevs49v281d-wpengine.netdna-ssl.com/wp-content/uploads/2017/06/wonder-woman-in-batman-v-superman-dawn-of-justice-hd-wallpapers.jpg");
+background-repeat:no-repeat;
+background-size:cover;
 
+}
+form, h1 {
+margin-left:1200px;
+ margin-top:150px;
+
+}
+
+h1 {
+text-shadow: 1px 2px 2px left red;
+color:white;
+}
+input {
+ padding: 20px;
+ padding-right: 30px;
+}
+
+label {
+  font-family: 'lora';
+  font-size: 19px;
+  color: white;
+}
+
+
+button {
+  border-radius: 5%;
+  padding: 10px;
+}
+</style>
 {{/partial}}
 
 {{> layout.hbs}}
