--- a/src/main/resources/templates/successtwo.hbs
+++ b/src/main/resources/templates/successtwo.hbs
@@ -1,4 +1,5 @@
 {{#partial "content"}}
+    <body>
     <h5>Squad name:</h5>
     <p> {{ name }}</p>
     <h5>Squad cause:</h5>
@@ -9,6 +10,17 @@
     Your  post has been saved.
 
     <a href="/squades/new">Go Back</a>
+    </body>
 {{/partial}}
-
+<style>
+    body {
+    margin-top: 3%;
+      margin-right:1500px;
+      font-size: 23px;
+      background-image: url(https://www.hdwallpapersfreedownload.com/uploads/large/super-heroes/aqua-man-dc-comics-jason-momoa-hd-pc-mobile-desktop-wallpaper.jpg);
+      background-repeat:no-repeat;
+      background-size:cover;
+      color: white;
+    }
+</style>
 {{> layout.hbs}}
